@@ -21,22 +21,36 @@ import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertNull;
 import static org.junit.Assert.assertTrue;
 
+import java.io.File;
+import java.io.FileWriter;
+import java.io.IOException;
+import java.util.UUID;
 import java.util.concurrent.TimeUnit;
 
-import org.apache.accumulo.core.Constants;
 import org.apache.accumulo.core.client.BatchWriterConfig;
+import org.apache.accumulo.core.client.ClientConfiguration.ClientProperty;
 import org.apache.accumulo.core.client.security.tokens.PasswordToken;
+import org.apache.accumulo.core.conf.Property;
 import org.apache.accumulo.core.security.Authorizations;
+import org.junit.Rule;
 import org.junit.Test;
+import org.junit.rules.TemporaryFolder;
+import org.junit.rules.TestName;
 
 import com.beust.jcommander.JCommander;
 
 public class TestClientOpts {
-  
+
+  @Rule
+  public TemporaryFolder tmpDir = new TemporaryFolder(new File(System.getProperty("user.dir") + "/target"));
+
+  @Rule
+  public TestName testName = new TestName();
+
   @Test
   public void test() {
     BatchWriterConfig cfg = new BatchWriterConfig();
-    
+
     // document the defaults
     ClientOpts args = new ClientOpts();
     BatchWriterOpts bwOpts = new BatchWriterOpts();
@@ -44,17 +58,17 @@ public class TestClientOpts {
     assertEquals(System.getProperty("user.name"), args.principal);
     assertNull(args.securePassword);
     assertNull(args.getToken());
-    assertEquals(new Long(cfg.getMaxLatency(TimeUnit.MILLISECONDS)), bwOpts.batchLatency);
-    assertEquals(new Long(cfg.getTimeout(TimeUnit.MILLISECONDS)), bwOpts.batchTimeout);
-    assertEquals(new Long(cfg.getMaxMemory()), bwOpts.batchMemory);
+    assertEquals(Long.valueOf(cfg.getMaxLatency(TimeUnit.MILLISECONDS)), bwOpts.batchLatency);
+    assertEquals(Long.valueOf(cfg.getTimeout(TimeUnit.MILLISECONDS)), bwOpts.batchTimeout);
+    assertEquals(Long.valueOf(cfg.getMaxMemory()), bwOpts.batchMemory);
     assertFalse(args.debug);
     assertFalse(args.trace);
     assertEquals(10, bsOpts.scanThreads.intValue());
     assertEquals(null, args.instance);
-    assertEquals(Constants.NO_AUTHS, args.auths);
+    assertEquals(Authorizations.EMPTY, args.auths);
     assertEquals("localhost:2181", args.zookeepers);
     assertFalse(args.help);
-    
+
     JCommander jc = new JCommander();
     jc.addObject(args);
     jc.addObject(bwOpts);
@@ -64,9 +78,9 @@ public class TestClientOpts {
     assertEquals("bar", args.principal);
     assertNull(args.securePassword);
     assertEquals(new PasswordToken("foo"), args.getToken());
-    assertEquals(new Long(3000), bwOpts.batchLatency);
-    assertEquals(new Long(2000), bwOpts.batchTimeout);
-    assertEquals(new Long(1024 * 1024), bwOpts.batchMemory);
+    assertEquals(Long.valueOf(3000), bwOpts.batchLatency);
+    assertEquals(Long.valueOf(2000), bwOpts.batchTimeout);
+    assertEquals(Long.valueOf(1024 * 1024), bwOpts.batchMemory);
     assertTrue(args.debug);
     assertTrue(args.trace);
     assertEquals(7, bsOpts.scanThreads.intValue());
@@ -74,7 +88,62 @@ public class TestClientOpts {
     assertEquals(new Authorizations("G1", "G2", "G3"), args.auths);
     assertEquals("zoohost1,zoohost2", args.zookeepers);
     assertTrue(args.help);
-    
+
   }
-  
+
+  @Test
+  public void testVolumes() throws IOException {
+    File instanceId = tmpDir.newFolder("instance_id");
+    File uuid = new File(instanceId, UUID.randomUUID().toString());
+    uuid.createNewFile();
+    // document the defaults
+    ClientOpts args = new ClientOpts();
+    File siteXml = tmpDir.newFile(this.getClass().getSimpleName() + "-" + testName.getMethodName() + "-site.xml");
+    FileWriter fileWriter = new FileWriter(siteXml);
+    fileWriter.append("<configuration>\n");
+
+    fileWriter.append("<property><name>" + Property.INSTANCE_VOLUMES.getKey() + "</name><value>" + tmpDir.getRoot().toURI().toString()
+        + "</value></property>\n");
+    fileWriter.append("<property><name>" + ClientProperty.INSTANCE_NAME + "</name><value>foo</value></property>\n");
+
+    fileWriter.append("</configuration>\n");
+    fileWriter.close();
+
+    JCommander jc = new JCommander();
+    jc.addObject(args);
+
+    jc.parse("--site-file", siteXml.getAbsolutePath());
+
+    args.getInstance();
+  }
+
+  @SuppressWarnings("deprecation")
+  @Test
+  public void testInstanceDir() throws IOException {
+    File instanceId = tmpDir.newFolder("instance_id");
+    instanceId.mkdir();
+    File uuid = new File(instanceId, UUID.randomUUID().toString());
+    uuid.createNewFile();
+    // document the defaults
+    ClientOpts args = new ClientOpts();
+    File siteXml = tmpDir.newFile(this.getClass().getSimpleName() + "-" + testName.getMethodName() + "-site.xml");
+    FileWriter fileWriter = new FileWriter(siteXml);
+    fileWriter.append("<configuration>\n");
+
+    fileWriter
+        .append("<property><name>" + Property.INSTANCE_DFS_DIR.getKey() + "</name><value>" + tmpDir.getRoot().getAbsolutePath() + "</value></property>\n");
+    fileWriter.append("<property><name>" + Property.INSTANCE_DFS_URI.getKey() + "</name><value>file://</value></property>\n");
+    fileWriter.append("<property><name>" + ClientProperty.INSTANCE_NAME + "</name><value>foo</value></property>\n");
+
+    fileWriter.append("</configuration>\n");
+    fileWriter.close();
+
+    JCommander jc = new JCommander();
+    jc.addObject(args);
+
+    jc.parse("--site-file", siteXml.getAbsolutePath());
+
+    args.getInstance();
+  }
+
 }
